--- a/.github/workflows/Packaging_CD.yml
+++ b/.github/workflows/Packaging_CD.yml
@@ -39,7 +39,7 @@ jobs:
      
       - name: Get release
         id: get_release
-        uses: agners/get-draft-release@v0.1.0
+        uses: bruceadams/get-release@v1.2.3
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN_REPO }}
           
