--- a/.github/workflows/Packaging_CD.yml
+++ b/.github/workflows/Packaging_CD.yml
@@ -39,7 +39,10 @@ jobs:
      
       - name: Get release
         id: get_release
-        uses: bruceadams/get-release@v1.2.3
+        #uses: bruceadams/get-release@v1.2.3
+        uses: joutvhu/get-release@v1
+        with:
+          debug: true
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN_REPO }}
           
