--- a/.github/workflows/Packaging_CD.yml
+++ b/.github/workflows/Packaging_CD.yml
@@ -23,7 +23,7 @@ jobs:
         
       - name: Check on failures
         if: (${{ success() }} || ${{ failure() }}) && (${{ steps.Release_directory.outcome }} == 'failure')
-        run: exit 1
+        run: echo ${{steps.Release_directory.outcome}} #exit 1
         
       - name: Setup version
         id: getversion
