--- a/Word_InsertEnvelope/Word_InsertEnvelope/Word_InsertEnvelope.csproj
+++ b/Word_InsertEnvelope/Word_InsertEnvelope/Word_InsertEnvelope.csproj
@@ -64,6 +64,7 @@
       <Link>Utility.cs</Link>
     </Compile>
     <Compile Include="InsertEnvelope.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -133,9 +134,6 @@
       <Isolated>False</Isolated>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="MakeMyDir" BeforeTargets="Build">
