--- a/.github/workflows/Packaging_CD.yml
+++ b/.github/workflows/Packaging_CD.yml
@@ -19,7 +19,10 @@ jobs:
         
       - name: Setup Release directory
         id: Release_directory
-        run: .\\Compile_testsuite.bat
+        run: |
+            .\\Compile_testsuite.bat
+            echo %ERRORLEVEL%
+            if: (%ERRORLEVEL% != 0) ${{ steps.Release_directory.outcome }} == 'failure'
         
       - name: Check on failures
         if: (${{ steps.Release_directory.outcome }} == 'failure')
