--- a/.github/workflows/Packaging_CD.yml
+++ b/.github/workflows/Packaging_CD.yml
@@ -21,8 +21,8 @@ jobs:
         id: Release_directory
         run: |
             .\\Compile_testsuite.bat > Build_output.txt
-            echo "::set-output name=build_output::$(findstr /i /c:"failed" .\\Build_output.txt)"
-        continue-on-error: false
+            echo "::set-output name=build_output::$(Select-String -Path .\\Build_output.txt -Pattern 'Failed')"
+        #continue-on-error: false
         
       - name: Check on failures
         #if: (${{ steps.Release_directory.outputs.build_output }} ==0 )
