--- a/.github/workflows/Packaging_CD.yml
+++ b/.github/workflows/Packaging_CD.yml
@@ -25,8 +25,8 @@ jobs:
         #continue-on-error: false
         
       - name: Check on failures
-        if: "!IsNullOrEmpty(${{ steps.Release_directory.outputs.build_output }})"
-        run: echo "${{ steps.Release_directory.outputs.build_output }}" #exit 1
+        if: ${{ steps.Release_directory.outputs.build_output }} != ""
+        run: exit 1 #echo "${{ steps.Release_directory.outputs.build_output }}" #exit 1
         
       - name: Setup version
         id: getversion
