--- a/.github/workflows/Packaging_gitdescribe.yml
+++ b/.github/workflows/Packaging_gitdescribe.yml
@@ -1,4 +1,4 @@
-name: Publishing Package
+name: Publishing Package v2
 
 on:
   workflow_dispatch:
@@ -7,7 +7,9 @@ jobs:
   zip-files:
     runs-on: self-hosted
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
         
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
