Update the workflow version naming

--- a/.github/workflows/Packaging_gitdescribe.yml
+++ b/.github/workflows/Packaging_gitdescribe.yml
@@ -23,11 +23,12 @@ jobs:
       - name: Setup version and tag
         id: getversion
         run: |
+          $TAG_CURRENT=$(git describe --tags)
+          echo "::set-output name=version::$TAG_CURRENT"
+          $TAG_CURRENT | Set-Content .\\Version.txt
           $TAG_CURRENT=$(git describe --tags --abbrev=0)
           echo "::set-output name=tag::$TAG_CURRENT"
           $TAG_CURRENT=$TAG_CURRENT -replace '[v]'
-          echo "::set-output name=version::$TAG_CURRENT"
-          echo $TAG_CURRENT > .\\Version.txt
       
       - name: Setup Release directory
         id: Release_directory
